--- a/src/main.scss
+++ b/src/main.scss
@@ -1,2 +1,2 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,400;8..144,600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,400;8..144,600&family=Roboto:wght@400;500&display=swap");
 @import "~normalize.css", "styles/vars", "styles/global";
